--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
     <footer>
       <p>VOID.WTF Webhook Tool &copy; 2025</p>
-      <p class="disclaimer">Use responsibly. We are not responsible for any misuse.</p>
+      <p class="disclaimer">Used to neutrialize discord stealers.</p>
     </footer>
   </div>
 
